--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 // Placez vos paramètres dans ce fichier pour remplacer les paramètres par défaut et les paramètres utilisateur.
 {
-    "javascript.validate.enable": false
-}
+    "javascript.validate.enable": false,
+    "editor.tabSize": 2,
+    "editor.detectIndentation": false
+  }
