--- a/web-app/package.json
+++ b/web-app/package.json
@@ -5,8 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "tsc",
-    "build": "tsc"
+    "postinstall": "tsc"
   },
   "author": "Matthieu Harlé",
   "repository": "https://github.com/Shywim/airhornbot",
