--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -68,3 +68,11 @@
 [[constraint]]
   branch = "master"
   name = "golang.org/x/oauth2"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/lib/pq"
+
+[[constraint]]
+  name = "github.com/spf13/viper"
+  version = "1.0.0"
