--- a/web-app/tsconfig.json
+++ b/web-app/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "outDir": "./public/js",
+    "outFile": "./public/js/script.js",
     "allowJs": true,
+    "allowSyntheticDefaultImports": true,
     "target": "es5",
     "lib": ["es5", "es6", "dom", "es2015.core", "es2017", "es2015.promise"]
   },
