--- a/Dockerfile.bot
+++ b/Dockerfile.bot
@@ -6,7 +6,7 @@ WORKDIR /go/src/github.com/Shywim/airhornbot
 COPY . .
 
 # go plugin package requires CGO
-RUN apk add --no-cache git gcc musl-dev
+RUN apk add --no-cache git gcc musl-dev ffmpeg
 RUN go get -u -d github.com/magefile/mage \
 	&& cd $GOPATH/src/github.com/magefile/mage \
 	&& go run bootstrap.go
