--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,36 +9,22 @@ variables:
   
 stages:
  - build
- - push
 
 before_script:
-  - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+ - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
 
-bot-build:
+docker-bot:
   stage: build
   script:
     - docker build --pull -t "$BOT_IMAGE_NAME":"$CI_COMMIT_TAG" -f Dockerfile.bot .
-  only:
-    - tags
-
-bot-push:
-  stage: push
-  script:
     - docker push "$BOT_IMAGE_NAME":"$CI_COMMIT_TAG"
   only:
     - tags
 
-web-build:
+docker-web:
   stage: build
   script:
     - docker build --pull -t "$WEB_IMAGE_NAME":"$CI_COMMIT_TAG" -f Dockerfile.web .
-  only:
-    - tags
-
-
-web-push:
-  stage: push
-  script:
     - docker push "$WEB_IMAGE_NAME":"$CI_COMMIT_TAG"
   only:
     - tags
