--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -80,3 +80,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/oxtoacart/bpool"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/jmoiron/sqlx"
