--- a/Dockerfile.bot
+++ b/Dockerfile.bot
@@ -2,16 +2,18 @@ FROM golang:1.13.4-alpine3.10
 
 VOLUME ["/etc/airhornbot", "/data", "/etc/airhornbot/plugins"]
 
-WORKDIR /go/src/gitlab.com/Shywim/airhornbot
-COPY . .
+WORKDIR /root
 
 # go plugin package requires CGO
 RUN apk add --no-cache git gcc musl-dev ffmpeg
-RUN go get -u -d github.com/magefile/mage \
-	&& cd $GOPATH/src/github.com/magefile/mage \
-	&& go run bootstrap.go
+RUN git clone https://github.com/magefile/mage \
+	&& cd mage \
+	&& go run bootstrap.go \
+	&& cd .. && rm -rf mage
+
+COPY . .
 
 RUN mage AirhornBot
 
-CMD ["/go/src/gitlab.com/Shywim/airhornbot/airhornbot"]
+CMD ["./airhornbot"]
 
