--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -2,15 +2,17 @@ FROM golang:1.13.4-alpine3.10
 
 VOLUME ["/etc/airhornbot", "/data"]
 
-WORKDIR /go/src/gitlab.com/Shywim/airhornbot
-COPY . .
+WORKDIR /root
 
 RUN apk add --no-cache git ffmpeg
-RUN go get -u -d github.com/magefile/mage \
-	&& cd $GOPATH/src/github.com/magefile/mage \
-	&& go run bootstrap.go
+RUN git clone https://github.com/magefile/mage \
+	&& cd mage \
+	&& go run bootstrap.go \
+	&& cd .. && rm -rf mage
+
+COPY . .
 
 RUN mage AirhornWeb
 
-CMD ["/go/src/gitlab.com/Shywim/airhornbot/airhornweb"]
+CMD ["./airhornweb"]
 
