--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -1,19 +1,31 @@
 [database]
-driver = "mysql"
-host = "localhost"
-port = 3306
-user = "root"
+# DB Driver (only postgres is supported at the moment)
+driver = "postgres"
+host = "db"
+port = ""
+user = "airhorn"
 password = ""
 name = "airhorn"
 ssl = false
 
 [redis]
-host = "localhost:6379"
+host = "redis:6379"
 
 [discord]
+# Bot token
 token = ""
+# User ID of the "owner" (used for special commands)
 owner_id = ""
+# Discord app credentials
+client_id = "643100645439569920"
+client_secret = "NvvrelyXJgNaau2dLj8ufuEo5238-Z29"
+# URL the user will be redirected to during the OAuth2 login
+redirect_uri = "http://localhost:14000/callback"
 
 [data]
 data_path = "/data"
 plugins_path = "/etc/airhornbot/plugins"
+
+[web]
+# URL where the web app is hosted
+url = "http://localhost:14000/"
